[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.39.0",
    "sounddevice>=0.5.0",
    "numpy>=2.1.1",
    "google-cloud-speech>=2.27.0",
    "google-cloud-aiplatform>=1.69.0",
    "vertexai>=1.69.0",
    "streamlit-webrtc>=0.47.9",
    "av>=12.3.0",
    "websockets>=13.1",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "uv",  # Add uv as a development dependency
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/"
format = "black ."
lint = "mypy ."

